Update route names
